# launcher

./: .gitignore  README.md  application.yml  application.yml.example  galaxy.yml  gui.py  launcher.py  main.py  proxy.py  pyproject.toml  repository_parser.py  specs.md  textual_application.yml  worker.py
gui/: base_gui.py  console_gui.py  qt_gui.py  textual_gui.py  tkinter_gui.py
launcher/: __init__.py  config.py  environment.py  main.py  proxy.py  repository.py  runner.py  updater.py  worker.py
launcher/gui/: __init__.py  base.py  console_gui.py  qt_gui.py  textual_gui.py  tkinter_gui.py
tests/: __init__.py  test_config.py  test_environment.py  test_gui_base.py  test_launcher.py  test_proxy.py  test_repository.py  test_repository_parser.py  test_updater.py  test_worker.py
tests/test_gui/: test_base.py
