[project]
name = "launcher"
version = "0.1.0"
description = "Auto-updating application launcher with Python environment management"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
    "toml>=0.10",
    "wetlands>=0.4.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "pytest-cov>=4.0",
]
qt = [
    "PySide6>=6.0",
]
textual = [
    "textual>=0.40",
]

[project.scripts]
launcher = "launcher.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.hatch.build.targets.wheel]
packages = ["launcher"]
